--- a/codes/index.html
+++ b/codes/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Phishing URL Detector</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Phishing URL Detector</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h2>Phishing URL Detector</h2>
 
-  <form id="urlForm">
-    <input type="text" id="urlInput" placeholder="Enter URL" required>
-    <button type="submit">Check</button>
-  </form>
+<div class="container">
+    <h1>🔐 Phishing URL Detector</h1>
+    <button id="toggleMode">🌙 Dark Mode</button>
+    <p class="subtitle">Check if a URL looks suspicious or unsafe</p>
 
-  <div id="result"></div>
+    <div class="card">
+        <input type="text" id="urlInput" placeholder="Enter URL to check...">
+        <button onclick="analyzeURL()">Check URL</button>
+    </div>
 
-  <script src="script.js"></script>
+    <div id="result"></div>
+</div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
